--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <meta charset="utf-8">
     </head>
     <header>
+        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
             <div class="logo">
-                <h3>Great Cliff's Logo</h3>
+                <img src="images/logo.png" alt="Great Cliffs Logo" width="125">
             </div>
         </div>
         <nav class="main-menu">
