--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title></title>
         <meta charset="utf-8">
     </head>
+
     <header>
         <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header">
@@ -13,10 +14,10 @@
         </div>
         <nav class="main-menu">
             <ul>
-                <li>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>Cliffs</li>
-                <li>Activities</li>
-                <li>Contact</li>
+                <li><a href="activities.html">Activities</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
