--- a/activities.html
+++ b/activities.html
@@ -1,96 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="utf-8">
-    </head>
+  <head>
+    <title>Great Cliffs of California</title>
+    <meta charset="utf-8" />
+  </head>
 
-    <header>
-        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
-        <div class="main-header">
-            <div class="logo">
-                <img src="images/logo.png" alt="Great Cliffs Logo" width="125">
-            </div>
-        </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Cliffs</li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <img
+      src="images/cliff_ocean.jpg"
+      alt="Ocean View Cliff"
+      width="1280"
+      height="564"
+    />
+    <div class="main-header">
+      <div class="logo">
+        <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
+      </div>
+    </div>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li>Cliffs</li>
+        <li class="active"><a href="activities.html">Activities</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Main Content -->
-    <main>
-        <h1>Activities</h1>
-        <p>There are many planned activities at all the cliff sites. Some are scheduled daily, weekly, monthly and yearly. These activities are not however run by the state park and recreational department. They are operated and manage by private vendors but are partners with the state department. Therefore, for schedule inquiries or information, please contact them directly. For a list of activities, please refer to the table below:</p>
+  <!-- Main Content -->
+  <main>
+    <h1>Activities</h1>
+    <p>
+      There are many planned activities at all the cliff sites. Some are
+      scheduled daily, weekly, monthly and yearly. These activities are not
+      however run by the state park and recreational department. They are
+      operated and manage by private vendors but are partners with the state
+      department. Therefore, for schedule inquiries or information, please
+      contact them directly. For a list of activities, please refer to the table
+      below:
+    </p>
 
-        <table border="1">
-            <caption>Activities at the Cliffs</caption>
-            <thead>
-                <tr>
-                    <th>Activity</th>
-                    <th>West Cliff</th>
-                    <th>North Cliff</th>
-                    <th>East Cliff</th>
-                    <th>South Cliff</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Hiking</td>
-                    <td>College Hikes</td>
-                    <td>Family Fun</td>
-                    <td>Treasure Trails</td>
-                    <td>Canyon Explorer</td>
-                </tr>
-                <tr>
-                    <td>Kayak</td>
-                    <td>Western Kayak Meetup</td>
-                    <td>Not Available</td>
-                    <td>Youth Kayaking</td>
-                    <td>Kayak Down</td>
-                </tr>
-                <tr>
-                    <td>Skydiving</td>
-                    <td>Seacliff Diving</td>
-                    <td>Sky is the limit</td>
-                    <td>Not Available</td>
-                    <td>Sky Diving for Beginners</td>
-                </tr>
-                <tr>
-                    <td>Biking</td>
-                    <td>Bicycle for One</td>
-                    <td>Not Available</td>
-                    <td>Bike Meetup Group</td>
-                    <td>Not Available</td>
-                </tr>
-                <tr>
-                    <td>Camping</td>
-                    <td>Youth Camp</td>
-                    <td>Rent a Tent</td>
-                    <td>Campground Adventure</td>
-                    <td>Sunset Camping</td>
-                </tr>
-            </tbody>
-            <tfoot></tfoot>
-        </table>
-    </main><!-- End Main Content -->
+    <table border="1">
+      <caption>
+        Activities at the Cliffs
+      </caption>
+      <thead>
+        <tr>
+          <th>Activity</th>
+          <th>West Cliff</th>
+          <th>North Cliff</th>
+          <th>East Cliff</th>
+          <th>South Cliff</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Hiking</td>
+          <td>College Hikes</td>
+          <td>Family Fun</td>
+          <td>Treasure Trails</td>
+          <td>Canyon Explorer</td>
+        </tr>
+        <tr>
+          <td>Kayak</td>
+          <td>Western Kayak Meetup</td>
+          <td>Not Available</td>
+          <td>Youth Kayaking</td>
+          <td>Kayak Down</td>
+        </tr>
+        <tr>
+          <td>Skydiving</td>
+          <td>Seacliff Diving</td>
+          <td>Sky is the limit</td>
+          <td>Not Available</td>
+          <td>Sky Diving for Beginners</td>
+        </tr>
+        <tr>
+          <td>Biking</td>
+          <td>Bicycle for One</td>
+          <td>Not Available</td>
+          <td>Bike Meetup Group</td>
+          <td>Not Available</td>
+        </tr>
+        <tr>
+          <td>Camping</td>
+          <td>Youth Camp</td>
+          <td>Rent a Tent</td>
+          <td>Campground Adventure</td>
+          <td>Sunset Camping</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
+    </table>
+  </main>
+  <!-- End Main Content -->
 
-    <footer>
-        <div  id="nondisclaimer">
-            <div  class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
-            <div  class="social">
-                <h3>Facebook Image</h3>
-                <h3>Instagram Image</h3>
-                <h3>Twitter Image</h3>
-            </div>
-        </div>
-        <div  id="disclaimer">
-            <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
-        </div>
-    </footer>
-
+  <footer>
+    <div id="nondisclaimer">
+      <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
+      <div class="social">
+        <h3>Facebook Image</h3>
+        <h3>Instagram Image</h3>
+        <h3>Twitter Image</h3>
+      </div>
+    </div>
+    <div id="disclaimer">
+      <p>
+        This website is designed and created solely for educational purposes
+        only at Westcliff University. All contents are not intended for any
+        commercial gain or use.
+      </p>
+    </div>
+  </footer>
 </html>
