--- a/contact.html
+++ b/contact.html
@@ -1,75 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="utf-8">
-    </head>
+  <head>
+    <title>Great Cliffs of California</title>
+    <meta charset="utf-8" />
+  </head>
 
-    <header>
-        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
-        <div class="main-header">
-            <div class="logo">
-                <img src="images/logo.png" alt="Great Cliffs Logo" width="125">
-            </div>
-        </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Cliffs</li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <img
+      src="images/cliff_ocean.jpg"
+      alt="Ocean View Cliff"
+      width="1280"
+      height="564"
+    />
+    <div class="main-header">
+      <div class="logo">
+        <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
+      </div>
+    </div>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li>Cliffs</li>
+        <li><a href="activities.html">Activities</a></li>
+        <li class="active"><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Main Content -->
-    <main>
-        <h1>Contacting Us</h1>
-        <p>If you need more information about the Cliffs, Hours of Operations, Facilities or questions about this site, please contact us bu using one of the following:</p>
-        <h2>Phone</h2>
-        <p>(800)GCLIFFS</p>
-        <h2>Email</h2>
-        <p>info@greatcliffs.com</p>
-        <form action="/contact" method="post">
-            <fieldset>
-                <legend>Contact Form</legend>
-                <label>Enter your full name</label><br>
-                <input type="text" name="name"><br>
-                <label>Enter your email</label><br>
-                <input type="email" name="email"><br>
-                <label>Enter your phone</label><br>
-                <input type="text" name="phone"><br>
-                <br><label>How should we contact you?</label><br>
-                <input type="radio" name="gender" value="male">Email
-                <input type="radio" name="gender" value="female">Phone<br>
-                <br>
-                <label>Which Cliff are you inquiring?</label><br>
-                <select>
-                  <option>West Cliff</option>
-                  <option>North Cliff</option>
-                  <option>East Cliff</option>
-                  <option>South Cliff</option>
-                </select>
-                <br>
-                <br>How did you hear about us:<br>
-                <textarea></textarea><br>
-                <input type="submit" value="Inquire">
-              </fieldset>
-        </form>
-    </main><!-- End Main Content -->
+  <!-- Main Content -->
+  <main>
+    <h1>Contacting Us</h1>
+    <p>
+      If you need more information about the Cliffs, Hours of Operations,
+      Facilities or questions about this site, please contact us bu using one of
+      the following:
+    </p>
+    <h2>Phone</h2>
+    <p>(800)GCLIFFS</p>
+    <h2>Email</h2>
+    <p>info@greatcliffs.com</p>
+    <form action="/contact" method="post">
+      <fieldset>
+        <legend>Contact Form</legend>
+        <label>Enter your full name</label><br />
+        <input type="text" name="name" /><br />
+        <label>Enter your email</label><br />
+        <input type="email" name="email" /><br />
+        <label>Enter your phone</label><br />
+        <input type="text" name="phone" /><br />
+        <br /><label>How should we contact you?</label><br />
+        <input type="radio" name="gender" value="male" />Email
+        <input type="radio" name="gender" value="female" />Phone<br />
+        <br />
+        <label>Which Cliff are you inquiring?</label><br />
+        <select>
+          <option>West Cliff</option>
+          <option>North Cliff</option>
+          <option>East Cliff</option>
+          <option>South Cliff</option>
+        </select>
+        <br />
+        <br />How did you hear about us:<br />
+        <textarea></textarea><br />
+        <input type="submit" value="Inquire" />
+      </fieldset>
+    </form>
+  </main>
+  <!-- End Main Content -->
 
-    <footer>
-        <div  id="nondisclaimer">
-            <div  class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
-            <div  class="social">
-                <h3>Facebook Image</h3>
-                <h3>Instagram Image</h3>
-                <h3>Twitter Image</h3>
-            </div>
-        </div>
-        <div  id="disclaimer">
-            <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
-        </div>
-    </footer>
-
+  <footer>
+    <div id="nondisclaimer">
+      <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
+      <div class="social">
+        <h3>Facebook Image</h3>
+        <h3>Instagram Image</h3>
+        <h3>Twitter Image</h3>
+      </div>
+    </div>
+    <div id="disclaimer">
+      <p>
+        This website is designed and created solely for educational purposes
+        only at Westcliff University. All contents are not intended for any
+        commercial gain or use.
+      </p>
+    </div>
+  </footer>
 </html>
