--- a/index.html
+++ b/index.html
@@ -1,71 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="utf-8">
-    </head>
+  <head>
+    <title>Great Cliffs of California</title>
+    <meta charset="utf-8" />
+    <style>
+      /* Header */
+      header {
+        width: 100%;
+        min-height: 400px;
+        padding-top: 3em;
+      }
 
+      #home header {
+        background: no-repeat lightgrey url(images/cliff_ocean.jpg);
+        background-size: 1500px;
+      }
+
+      .main-header {
+        background-color: rgba(255, 255, 255, 0.8);
+        width: 700px;
+        margin: 2em auto 0 auto;
+        min-height: 100px;
+        height: 100px;
+      }
+
+      .main-header .logo img {
+        width: 100px;
+        height: 100px;
+        margin: 0 2em 0 0;
+        float: left;
+      }
+      /* Nav */
+      .main-menu {
+        margin-left: 226px;
+        font-weight: 400;
+      }
+
+      .main-menu ul li {
+        list-style-type: none;
+        display: inline-block;
+        float: left;
+        padding-left: 25px;
+        padding-right: 25px;
+        border-left: 1px solid rgba(202, 204, 202, 0.6);
+        line-height: 100px;
+        text-transform: uppercase;
+        font-size: 14px;
+      }
+
+      .main-menu ul li a {
+        text-decoration: none;
+        color: #888;
+      }
+
+      .main-menu ul li a:hover {
+        color: #9ed034;
+      }
+
+      .main-menu ul li.active {
+        background: #9ed034;
+        border: none;
+      }
+
+      .main-menu ul li.active a {
+        color: #fff;
+      }
+
+      /* Main Content */
+      main h2 {
+        color: #9ed034;
+      }
+
+      main {
+        margin: 80px 100px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      /* Partners */
+      section {
+        width: 100%;
+        background-color: #4288c3;
+      }
+
+      section #partners {
+        width: 1200px;
+        padding: 2em 0 2em 0;
+        margin: 0 auto;
+        text-align: center;
+      }
+
+      section #partners .partner {
+        display: inline-block;
+        margin: 0 0.75em;
+        padding: 1.3em 1.5em;
+        background-color: #fff;
+        border-radius: 50%;
+      }
+
+      section #partners .partner img {
+        width: 90px;
+        height: 90px;
+      }
+
+      /* Footer */
+      footer {
+        width: 100%;
+        height: 155px;
+        padding-bottom: 1em;
+        background-color: #ecfab8;
+      }
+
+      footer #nondisclaimer .copy {
+        padding: 3.5em 3.5em 3.5em 13em;
+        float: left;
+        font-size: 0.9em;
+      }
+
+      footer #nondisclaimer .social {
+        padding: 2.5em;
+        margin-right: 9.25em;
+        float: right;
+      }
+
+      footer #disclaimer {
+        clear: both;
+      }
+
+      footer #disclaimer p {
+        font-size: 0.85em;
+        text-align: center;
+      }
+    </style>
+  </head>
+
+  <body id="home">
     <header>
-        <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
-        <div class="main-header">
-            <div class="logo">
-                <img src="images/logo.png" alt="Great Cliffs Logo" width="125">
-            </div>
+      <div class="main-header">
+        <div class="logo">
+          <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
         </div>
         <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Cliffs</li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+          <ul>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li>Cliffs</li>
+            <li><a href="activities.html">Activities</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </nav>
+      </div>
     </header>
 
     <!-- Main Content -->
     <main>
-        <h2>Introducing California's Greatest Cliffs</h2>
-        <h3>What is so unique about California cliffs?</h3>
-        <p>California cliffs are one of a kind in the United States where no cliffs are as magnificent and beautiful as them. And California is the only state that have cliffs that fronts all possible environments: sea, river, mountains and canyons. There are four such individual unique cliffs: West Cliff, North Cliff, East Cliff and South Cliff. All offer fantastic overlooking views, recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
-        <h3>Where are these cliffs?</h3>
-        <p>Located within a 100 mile radius from Irvine, California, they can be reached by roads easily. The closest cliff to Irvine is West Cliff, which is the most popular and most visited.</p>
-    </main><!-- End Main Content -->
+      <h2>Introducing California's Greatest Cliffs</h2>
+      <h3>What is so unique about California cliffs?</h3>
+      <p>
+        California cliffs are one of a kind in the United States where no cliffs
+        are as magnificent and beautiful as them. And California is the only
+        state that have cliffs that fronts all possible environments: sea,
+        river, mountains and canyons. There are four such individual unique
+        cliffs: West Cliff, North Cliff, East Cliff and South Cliff. All offer
+        fantastic overlooking views, recreational areas, camping sites, wildlife
+        watch spots and overnight cabins.
+      </p>
+      <h3>Where are these cliffs?</h3>
+      <p>
+        Located within a 100 mile radius from Irvine, California, they can be
+        reached by roads easily. The closest cliff to Irvine is West Cliff,
+        which is the most popular and most visited.
+      </p>
+    </main>
+    <!-- End Main Content -->
 
     <section>
-        <ul id="partners">
-            <li class="partner">
-                <h3>Partner 1 Image</h3>
-            </li>
-            <li class="partner">
-                <h3>Partner 2 Image</h3>
-            </li>
-            <li class="partner">
-                <h3>Partner 3 Image</h3>
-            </li>
-            <li class="partner">
-                <h3>Partner 4 Image</h3>
-            </li>
-            <li class="partner">
-                <h3>Partner 5 Image</h3>
-            </li>
-            <li class="partner">
-                <h3>Partner 6 Image</h3>
-            </li>
-        </ul>
+      <ul id="partners">
+        <li class="partner">
+          <img
+            src="images/partners/partner-bustour.png"
+            alt="Partner Bus Tours"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-cabinrental.png"
+            alt="Partner Cabin Rental"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-campingadv.png"
+            alt="Partner Camping Adventure"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-collegetours.png"
+            alt="Partner College Tours"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-rentalbike.png"
+            alt="Partner Bike Rentals"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-tourgroup.png"
+            alt="Partner Tour Group"
+          />
+        </li>
+      </ul>
     </section>
+  </body>
 
-    <footer>
-        <div  id="nondisclaimer">
-            <div  class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
-            <div  class="social">
-                <h3>Facebook Image</h3>
-                <h3>Instagram Image</h3>
-                <h3>Twitter Image</h3>
-            </div>
-        </div>
-        <div  id="disclaimer">
-            <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
-        </div>
-    </footer>
-
+  <footer>
+    <div id="nondisclaimer">
+      <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
+      <div class="social">
+        <h3>Facebook Image</h3>
+        <h3>Instagram Image</h3>
+        <h3>Twitter Image</h3>
+      </div>
+    </div>
+    <div id="disclaimer">
+      <p>
+        This website is designed and created solely for educational purposes
+        only at Westcliff University. All contents are not intended for any
+        commercial gain or use.
+      </p>
+    </div>
+  </footer>
 </html>
