--- a/cliffs.html
+++ b/cliffs.html
@@ -11,7 +11,7 @@
     />
   </head>
 
-  <body id="home">
+  <body id="cliffs">
     <header>
       <div class="main-header">
         <div class="logo">
@@ -19,8 +19,8 @@
         </div>
         <nav class="main-menu">
           <ul>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="cliffs.html">Cliffs</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="cliffs.html">Cliffs</a></li>
             <li><a href="activities.html">Activities</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -30,23 +30,43 @@
 
     <!-- Main Content -->
     <main>
-      <h2>Introducing California's Greatest Cliffs</h2>
-      <h3>What is so unique about California cliffs?</h3>
+      <h2>California's Greatest Cliffs</h2>
       <p>
-        California cliffs are one of a kind in the United States where no cliffs
-        are as magnificent and beautiful as them. And California is the only
-        state that have cliffs that fronts all possible environments: sea,
-        river, mountains and canyons. There are four such individual unique
-        cliffs: West Cliff, North Cliff, East Cliff and South Cliff. All offer
-        fantastic overlooking views, recreational areas, camping sites, wildlife
-        watch spots and overnight cabins.
+        The greatest cliffs are these four cliffs located in southern
+        California. Each of these cliffs have their own uniqueness and beauty:
+        West Cliff, North Cliff, East Cliff and South Cliff are the pride of
+        California. Each cliff has many amenities to offer visitors such as
+        recreational areas, camping sites, wildlife watch spots and overnight
+        cabins.
       </p>
-      <h3>Where are these cliffs?</h3>
       <p>
-        Located within a 100 mile radius from Irvine, California, they can be
-        reached by roads easily. The closest cliff to Irvine is West Cliff,
-        which is the most popular and most visited.
+        No matter which direction you head from Irvine, California, the sites
+        are easily reached within a 100 mile radius. West Cliff is the most
+        popular among Westcliff University campus students because of its close
+        proximity.
       </p>
+      <div class="cliffs-container">
+        <div class="cliff-row">
+          <div class="cliff-card">
+            <h3 class="cliff-title">West Cliff</h3>
+            <img src="images/cliff-west-sea.jpg" alt="West Cliff" />
+          </div>
+          <div class="cliff-card">
+            <h3 class="cliff-title">North Cliff</h3>
+            <img src="images/cliff-north-mountain.jpg" alt="North Cliff" />
+          </div>
+        </div>
+        <div class="cliff-row">
+          <div class="cliff-card">
+            <h3 class="cliff-title">East Cliff</h3>
+            <img src="images/cliff-east-river.jpg" alt="East Cliff" />
+          </div>
+          <div class="cliff-card">
+            <h3 class="cliff-title">South Cliff</h3>
+            <img src="images/cliff-south-canyon.jpg" alt="South Cliff" />
+          </div>
+        </div>
+      </div>
     </main>
     <!-- End Main Content -->
 
