--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         </nav>
       </div>
     </header>
-
+    <section id="timeofday">
+      <span>Your Current Local Time: </span>
+      <span id="clock"> </span>
+    </section>
     <!-- Main Content -->
     <main>
       <h2>Introducing California's Greatest Cliffs</h2>
