--- a/activities.html
+++ b/activities.html
@@ -27,6 +27,10 @@
         </nav>
       </div>
     </header>
+    <section id="timeofday">
+      <span>Your Current Local Time: </span>
+      <span id="clock"> </span>
+    </section>
 
     <!-- Main Content -->
     <main>
@@ -98,7 +102,7 @@
 
     <section>
       <ul id="partners">
-        <li class="partner">
+        <!-- <li class="partner">
           <img
             src="images/partners/partner-bustour.png"
             alt="Partner Bus Tours"
@@ -133,7 +137,7 @@
             src="images/partners/partner-tourgroup.png"
             alt="Partner Tour Group"
           />
-        </li>
+        </li> -->
       </ul>
     </section>
 
@@ -154,5 +158,100 @@
         </p>
       </div>
     </footer>
+    <script>
+      // Create a time data function
+      function currentTime() {
+        // Declare variables
+        var d = new Date(); // Get current date
+        var hr = d.getHours(); // Get current hours
+        var min = d.getMinutes(); // Get current minutes
+        var sec = d.getSeconds(); // Get current seconds
+        var ampm; // Declare empty variable to store AM or PM
+
+        if (sec < 10) {
+          sec = "0" + sec;
+        }
+
+        if (min < 10) {
+          min = "0" + min;
+        }
+
+        if (hr == 12) {
+          ampm = "PM";
+        } else if (hr > 12) {
+          hr -= 12;
+          ampm = "PM";
+        } else {
+          ampm = "AM";
+        }
+
+        var utchr = d.getUTCHours();
+        if (utchr < hr) {
+          utchr += 12;
+        }
+        var timeDiff = utchr - hr;
+        var adjTimeDiff = Math.abs(timeDiff);
+
+        var timeZone;
+        if (adjTimeDiff == 8) {
+          timeZone = "PT";
+        } else if (adjTimeDiff == 7) {
+          timeZone = "MT";
+        } else if (adjTimeDiff == 6) {
+          timeZone = "CT";
+        } else if (adjTimeDiff == 5) {
+          timeZone = "ET";
+        } else {
+          timeZone = "GMT";
+        }
+
+        var time = hr + ":" + min + ":" + sec + " " + ampm + " " + timeZone;
+        document.getElementById("clock").innerText = time;
+      }
+
+      setInterval(currentTime, 1000);
+    </script>
+    <script>
+      const partners = [
+        {
+          src: "images/partners/partner-bustour.png",
+          alt: "Partner Bus Tours",
+        },
+        {
+          src: "images/partners/partner-cabinrental.png",
+          alt: "Partner Cabin Rental",
+        },
+        {
+          src: "images/partners/partner-campingadv.png",
+          alt: "Partner Camping Adventure",
+        },
+        {
+          src: "images/partners/partner-collegetours.png",
+          alt: "Partner College Tours",
+        },
+        {
+          src: "images/partners/partner-rentalbike.png",
+          alt: "Partner Bike Rentals",
+        },
+        {
+          src: "images/partners/partner-tourgroup.png",
+          alt: "Partner Tour Group",
+        },
+      ];
+
+      const ul = document.getElementById("partners");
+
+      partners.forEach((partner) => {
+        let li = document.createElement("li");
+        li.className = "partner";
+
+        let img = document.createElement("img");
+        img.src = partner.src;
+        img.alt = partner.alt;
+
+        li.appendChild(img);
+        ul.appendChild(li);
+      });
+    </script>
   </body>
 </html>
