--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section>
       <ul id="partners">
-        <li class="partner">
+        <!-- <li class="partner">
           <img
             src="images/partners/partner-bustour.png"
             alt="Partner Bus Tours"
@@ -90,7 +90,7 @@
             src="images/partners/partner-tourgroup.png"
             alt="Partner Tour Group"
           />
-        </li>
+        </li> -->
       </ul>
     </section>
 
@@ -163,6 +163,48 @@
       }
 
       setInterval(currentTime, 1000);
+    </script>
+    <script>
+      const partners = [
+        {
+          src: "images/partners/partner-bustour.png",
+          alt: "Partner Bus Tours",
+        },
+        {
+          src: "images/partners/partner-cabinrental.png",
+          alt: "Partner Cabin Rental",
+        },
+        {
+          src: "images/partners/partner-campingadv.png",
+          alt: "Partner Camping Adventure",
+        },
+        {
+          src: "images/partners/partner-collegetours.png",
+          alt: "Partner College Tours",
+        },
+        {
+          src: "images/partners/partner-rentalbike.png",
+          alt: "Partner Bike Rentals",
+        },
+        {
+          src: "images/partners/partner-tourgroup.png",
+          alt: "Partner Tour Group",
+        },
+      ];
+
+      const ul = document.getElementById("partners");
+
+      partners.forEach((partner) => {
+        let li = document.createElement("li");
+        li.className = "partner";
+
+        let img = document.createElement("img");
+        img.src = partner.src;
+        img.alt = partner.alt;
+
+        li.appendChild(img);
+        ul.appendChild(li);
+      });
     </script>
   </body>
 </html>
