wk4 d1 1st comment

--- a/cliffs.html
+++ b/cliffs.html
@@ -75,44 +75,7 @@
     <!-- End Main Content -->
 
     <section>
-      <ul id="partners">
-        <!-- <li class="partner">
-          <img
-            src="images/partners/partner-bustour.png"
-            alt="Partner Bus Tours"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-cabinrental.png"
-            alt="Partner Cabin Rental"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-campingadv.png"
-            alt="Partner Camping Adventure"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-collegetours.png"
-            alt="Partner College Tours"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-rentalbike.png"
-            alt="Partner Bike Rentals"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-tourgroup.png"
-            alt="Partner Tour Group"
-          />
-        </li> -->
-      </ul>
+      <ul id="partners"></ul>
     </section>
 
     <footer>
@@ -132,100 +95,9 @@
         </p>
       </div>
     </footer>
-    <script>
-      // Create a time data function
-      function currentTime() {
-        // Declare variables
-        var d = new Date(); // Get current date
-        var hr = d.getHours(); // Get current hours
-        var min = d.getMinutes(); // Get current minutes
-        var sec = d.getSeconds(); // Get current seconds
-        var ampm; // Declare empty variable to store AM or PM
-
-        if (sec < 10) {
-          sec = "0" + sec;
-        }
-
-        if (min < 10) {
-          min = "0" + min;
-        }
-
-        if (hr == 12) {
-          ampm = "PM";
-        } else if (hr > 12) {
-          hr -= 12;
-          ampm = "PM";
-        } else {
-          ampm = "AM";
-        }
-
-        var utchr = d.getUTCHours();
-        if (utchr < hr) {
-          utchr += 12;
-        }
-        var timeDiff = utchr - hr;
-        var adjTimeDiff = Math.abs(timeDiff);
-
-        var timeZone;
-        if (adjTimeDiff == 8) {
-          timeZone = "PT";
-        } else if (adjTimeDiff == 7) {
-          timeZone = "MT";
-        } else if (adjTimeDiff == 6) {
-          timeZone = "CT";
-        } else if (adjTimeDiff == 5) {
-          timeZone = "ET";
-        } else {
-          timeZone = "GMT";
-        }
-
-        var time = hr + ":" + min + ":" + sec + " " + ampm + " " + timeZone;
-        document.getElementById("clock").innerText = time;
-      }
-
-      setInterval(currentTime, 1000);
-    </script>
-    <script>
-      const partners = [
-        {
-          src: "images/partners/partner-bustour.png",
-          alt: "Partner Bus Tours",
-        },
-        {
-          src: "images/partners/partner-cabinrental.png",
-          alt: "Partner Cabin Rental",
-        },
-        {
-          src: "images/partners/partner-campingadv.png",
-          alt: "Partner Camping Adventure",
-        },
-        {
-          src: "images/partners/partner-collegetours.png",
-          alt: "Partner College Tours",
-        },
-        {
-          src: "images/partners/partner-rentalbike.png",
-          alt: "Partner Bike Rentals",
-        },
-        {
-          src: "images/partners/partner-tourgroup.png",
-          alt: "Partner Tour Group",
-        },
-      ];
-
-      const ul = document.getElementById("partners");
-
-      partners.forEach((partner) => {
-        let li = document.createElement("li");
-        li.className = "partner";
-
-        let img = document.createElement("img");
-        img.src = partner.src;
-        img.alt = partner.alt;
-
-        li.appendChild(img);
-        ul.appendChild(li);
-      });
-    </script>
+    <!-- Digital Clock -->
+    <script src="js/digclock.js"></script>
+    <!-- Partners -->
+    <script src="js/site_scripts.js"></script>
   </body>
 </html>
