--- a/index.html
+++ b/index.html
@@ -55,42 +55,6 @@
 
     <section>
       <ul id="partners">
-        <!-- <li class="partner">
-          <img
-            src="images/partners/partner-bustour.png"
-            alt="Partner Bus Tours"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-cabinrental.png"
-            alt="Partner Cabin Rental"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-campingadv.png"
-            alt="Partner Camping Adventure"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-collegetours.png"
-            alt="Partner College Tours"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-rentalbike.png"
-            alt="Partner Bike Rentals"
-          />
-        </li>
-        <li class="partner">
-          <img
-            src="images/partners/partner-tourgroup.png"
-            alt="Partner Tour Group"
-          />
-        </li> -->
       </ul>
     </section>
 
@@ -111,7 +75,6 @@
         </p>
       </div>
     </footer>
-    <script>
       // Create a time data function
       function currentTime() {
         // Declare variables
@@ -163,48 +126,10 @@
       }
 
       setInterval(currentTime, 1000);
-    </script>
-    <script>
-      const partners = [
-        {
-          src: "images/partners/partner-bustour.png",
-          alt: "Partner Bus Tours",
-        },
-        {
-          src: "images/partners/partner-cabinrental.png",
-          alt: "Partner Cabin Rental",
-        },
-        {
-          src: "images/partners/partner-campingadv.png",
-          alt: "Partner Camping Adventure",
-        },
-        {
-          src: "images/partners/partner-collegetours.png",
-          alt: "Partner College Tours",
-        },
-        {
-          src: "images/partners/partner-rentalbike.png",
-          alt: "Partner Bike Rentals",
-        },
-        {
-          src: "images/partners/partner-tourgroup.png",
-          alt: "Partner Tour Group",
-        },
-      ];
-
-      const ul = document.getElementById("partners");
-
-      partners.forEach((partner) => {
-        let li = document.createElement("li");
-        li.className = "partner";
-
-        let img = document.createElement("img");
-        img.src = partner.src;
-        img.alt = partner.alt;
-
-        li.appendChild(img);
-        ul.appendChild(li);
-      });
-    </script>
+    </script> -->
+    <!-- Digital Clock -->
+    <script src="js/digclock.js"></script>
+    <!-- Partners -->
+    <script src="js/site_scripts.js"></script>
   </body>
 </html>
