--- a/contact.html
+++ b/contact.html
@@ -129,5 +129,7 @@
     <script src="js/digclock.js"></script>
     <!-- Partners -->
     <script src="js/site_scripts.js"></script>
+    <!-- Random Codes -->
+    <script src="js/randomcodes.js"></script>
   </body>
 </html>
